// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={134}
      desc="gum"
      id="1"
      key="1"
      note=""
      timestamp={"1970-01-01T00:00:00.000Z"}
    />
    <ExpenseListItem
      amount={109500}
      desc="rent"
      id="2"
      key="2"
      note=""
      timestamp={"1969-12-28T00:00:00.000Z"}
    />
    <ExpenseListItem
      amount={4500}
      desc="Credit Card"
      id="3"
      key="3"
      note=""
      timestamp={"1970-01-05T00:00:00.000Z"}
    />
  </div>
</div>
`;

exports[`Should render no expenses with empty expenses props 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item__message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`Should render no expenses without expenses props 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item__message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;
